--- a/FamilyTree/Views/Home/Index.cshtml
+++ b/FamilyTree/Views/Home/Index.cshtml
@@ -1,94 +1,442 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<style>
+    .tree * {
+        margin: 0;
+        padding: 0;
+    }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+    body {
+        font-family: arial, verdana, tahoma;
+        font-size: 12px;
+        color: #666;
+        background-color: #fff;
+    }
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
+    .tree {
+        white-space: nowrap;
+        padding-bottom: 250px;
+    }
+
+        .tree ul {
+            padding-top: 5px;
+            position: relative;
+            display: table;
+            margin: 0 auto;
+            font-size: 0;
+            transition: all 0.5s;
+            -webkit-transition: all 0.5s;
+            -moz-transition: all 0.5s;
+        }
+
+        .tree li {
+            /*float: left; */
+            display: inline-block;
+            text-align: center;
+            list-style-type: none;
+            position: relative;
+            padding: 70px 5px 0 5px;
+            font-size: 12px;
+            transition: all 0.5s;
+            -webkit-transition: all 0.5s;
+            -moz-transition: all 0.5s;
+        }
+
+            /*We will use ::before and ::after to draw the connectors*/
+
+            .tree li::before,
+            .tree li::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                right: 50%;
+                border-top: 1px solid #ccc;
+                width: 50%;
+                height: 70px;
+            }
+
+            .tree li::after {
+                right: auto;
+                left: 50%;
+                border-left: 2px solid #ccc;
+            }
+
+            /*We need to remove left-right connectors from elements without 
+any siblings*/
+
+            .tree li:only-child::after {
+                display: none;
+            }
+
+            /*Remove space from the top of single children*/
+
+            /*
+.tree li:only-child{ padding-top: 0;}
+*/
+
+            /*Remove left connector from first child and 
+right connector from last child*/
+
+            .tree li:first-child::before,
+            .tree li:last-child::after {
+                border: 0 none;
+            }
+
+            /*Adding back the vertical connector to the last nodes*/
+
+            .tree li li:last-child::before {
+                border-right: 2px solid #ccc;
+                border-radius: 0 5px 0 0;
+                -webkit-border-radius: 0 5px 0 0;
+                -moz-border-radius: 0 5px 0 0;
+            }
+
+            .tree li:first-child::after {
+                border-radius: 5px 0 0 0;
+                -webkit-border-radius: 5px 0 0 0;
+                -moz-border-radius: 5px 0 0 0;
+            }
+
+            .tree li li:only-child::before {
+                right: auto;
+                left: 50%;
+                border-left: 2px solid #ccc;
+                border-right: none;
+            }
+
+        /*
+.tree ul.p>li::before {
+    border:none;
+    content: '&';
+    left:0;
+    width:100%; 
+    }
+
+.tree ul.p>li::after{
+    content: '';
+    position: absolute; top: 0; right: 50%;
+    border-top: none;
+    width: 50%; height: 20px;
+}
+
+.tree ul.p>li::after{
+    border-left: none;
+}
+*/
+
+        /* Use pf to indicate that its a child of another family. */
+
+        .tree ul.pf > li::before {
+            right: auto;
+            left: 50%;
+            border-left: 2px solid #ccc;
+            border-right: none;
+        }
+
+        .tree ul.pf > li::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 50%;
+            border-top: none;
+            width: 50%;
+            height: 20px;
+        }
+
+        .tree ul.pf > li::after {
+            border-left: none;
+        }
+
+        /*Time to add downward connectors from parents*/
+
+        .tree ul.c {
+            padding-top: 70px;
+        }
+
+        .tree ul ul.c::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            border-left: 2px solid #ccc;
+            width: 0;
+            height: 20px;
+            border: none;
+        }
+
+        .tree li a {
+            border: 1px solid #ccc;
+            padding: 0px;
+            text-decoration: none;
+            color: #666;
+            background-color: #fff;
+            /*background-image:url(circle.jpg)*/
+            /*color: #fff;
+    background-color:#999;*/
+            display: inline-block;
+            min-width: 50px;
+            border-radius: 5px;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
+            transition: all 0.5s;
+            -webkit-transition: all 0.5s;
+            -moz-transition: all 0.5s;
+        }
+
+            /* red border on contacts
+.tree li a.o{
+    border: 1px solid #f66;
+}
+*/
+
+            .tree li a span {
+                display: block;
+                font-size: 10px;
+            }
+
+            /*Time for some hover effects*/
+
+            /*We will apply the hover effect the the lineage of the element also*/
+
+            /*.tree li a.m:hover { background: #c8e4f8; color: #000; border: 1px solid #94a0b4; }   
+.tree li a.f:hover { background: #ffc0cb; color: #000; border: 1px solid #94a0b4; } 
+
+.tree li a:hover+ul li a.m { background: #c8e4fb; color: #000; border: 1px solid #94a0b4; } 
+.tree li a:hover+ul li a.f { background: #ffc0cb; color: #000; border: 1px solid #94a0b4; } 
+
+.tree li a.md:hover { background: #c8e4f8; color: #000; border: 1px solid #94a0b4; }    
+.tree li a.fd:hover { background: #ffc0cb; color: #000; border: 1px solid #94a0b4; }    
+
+.tree li a:hover+ul li a.md { background: #c8e4fb; color: #000; border: 1px solid #94a0b4; }    
+.tree li a:hover+ul li a.fd { background: #ffc0cb; color: #000; border: 1px solid #94a0b4; }*/
+
+            .tree li a.m {
+                width: 80px;
+                height: 80px;
+                border-radius: 15px;
+                font-size: 10px;
+                color: #000;
+                text-align: center;
+                background: #c8e4fb;
+                box-shadow: 1px 1px 2px #000
+            }
+
+            .tree li a.f {
+                width: 80px;
+                height: 80px;
+                border-radius: 50px;
+                font-size: 10px;
+                color: #000;
+                text-align: center;
+                background: #ffc0cb;
+                box-shadow: 1px 1px 2px #000
+            }
+
+            .tree li a.m_dead {
+                width: 80px;
+                height: 80px;
+                border-radius: 15px;
+                font-size: 10px;
+                color: #000;
+                text-align: center;
+                background: #F1F9FE;
+                box-shadow: 1px 1px 2px #000
+            }
+
+            .tree li a.f_dead {
+                width: 80px;
+                height: 80px;
+                border-radius: 50px;
+                font-size: 10px;
+                color: #000;
+                text-align: center;
+                background: #FFF0F2;
+                box-shadow: 1px 1px 2px #000
+            }
+
+            .tree li a.m_nolink {
+                width: 80px;
+                height: 80px;
+                border-radius: 15px;
+                font-size: 10px;
+                color: #000;
+                text-align: center;
+                background: #c8e4fb;
+                box-shadow: 1px 1px 2px #000
+            }
+
+            .tree li a.f_nolink {
+                width: 80px;
+                height: 80px;
+                border-radius: 50px;
+                font-size: 10px;
+                color: #000;
+                text-align: center;
+                background: #ffc0cb;
+                box-shadow: 1px 1px 2px #000
+            }
+
+            .tree li a.m_dead_nolink {
+                width: 80px;
+                height: 80px;
+                border-radius: 15px;
+                font-size: 10px;
+                color: #000;
+                text-align: center;
+                background: #F1F9FE;
+                box-shadow: 1px 1px 2px #000
+            }
+
+            .tree li a.f_dead_nolink {
+                width: 80px;
+                height: 80px;
+                border-radius: 50px;
+                font-size: 10px;
+                color: #000;
+                text-align: center;
+                background: #FFF0F2;
+                box-shadow: 1px 1px 2px #000
+            }
+
+        .tree li.marriage {
+            height: 0px;
+            border: 1px;
+            border-style: solid;
+            border-color: #000;
+            color: #000;
+            padding: 0;
+            background: #FFF;
+        }
+
+            .tree li.marriage::before {
+                border: none
+            }
+
+        .tree li.divorce {
+            height: 0px;
+            border: 2px;
+            border-style: dashed;
+            border-color: #000;
+            color: #000;
+            padding: 0;
+            background: #FFF;
+        }
+
+            .tree li.divorce::before {
+                border: none
+            }
+
+        .tree ul.pf > li.parent::before {
+            border: none
+        }
+
+        .tree ul.pf > li.parentWithAncestor::before {
+            border-top: none;
+        }
+
+        .tree div.person {
+            display: inline-block;
+            vertical-align: central;
+            padding: 20px 0px;
+            width: 80px;
+        }
+
+    /*
+.tree li a.m:hover{width:100px;height:100px;border-radius:15px;font-size:12px;color:#000;text-align:center;background: #c8e4fb; box-shadow:0 0 4px #222 inset}
+.tree li a.f:hover{width:100px;height:100px;border-radius:50px;font-size:12px;color:#000;text-align:center;background: #ffc0cb; box-shadow:0 0 4px #222 inset}
+.tree li a.m_dead:hover{width:100px;height:100px;border-radius:15px;font-size:12px;color:#000;text-align:center;background: #F1F9FE; box-shadow:0 0 4px #222 inset}
+.tree li a.f_dead:hover{width:100px;height:100px;border-radius:50px;font-size:12px;color:#000;text-align:center;background: #FFF0F2; box-shadow:0 0 4px #222 inset}
+*/
+
+    /*.tree li a.m { background: #c8e4f8; color: #000; border: 1px solid #94a0b4; } 
+.tree li a.f { background: #ffc0cb; color: #000; border: 1px solid #94a0b4; }   
+
+.tree li a.md { background: #c8e4f8; color: #000; border: 1px solid #94a0b4; }  
+.tree li a.fd { background: #ffc0cb; color: #000; border: 1px solid #94a0b4; }  
+
+.tree li a+ul li a.m { background: #c8e4fb; color: #000; border: 1px solid #94a0b4; }   
+.tree li a+ul li a.f { background: #ffc0cb; color: #000; border: 1px solid #94a0b4; }*/
+
+    /*Thats all. I hope you enjoyed it.
+Thanks :)*/
+
+
+</style>
+<h1>Schvartzman family tree</h1>
+<div class="tree">
+    <ul class="pf">
+        <li class="parent">
+            <a class="f_nolink">
+                <div class="person" ">Claudia<br>Avila<span>(1961 - )</span></div>
+            </a>
+        </li>
+        <li class="divorce">
+            <ul class="c">
+                <li>
+                    <a class="m_nolink">
+                        <div class="person" ">Sebastian<br>Berdichevsky<span>(1981 - )</span></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="f">
+                        <div class="person" ">Sara<br>Berdichevsky<span>(1986 - )</span></div>
+                    </a>
+                </li>
+                <li>
+                    <a class="m_nolink">
+                        <div class="person" ">Manuel<br>Berdichevsky<span>(1987 - )</span></div>
+                    </a>
+                </li>
+                <li>
+                    <a class="m_nolink">
+                        <div class="person" ">Sergio<br>Berdichevsky<span>(1989 - )</span></div>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="parentWithAncestor">
+            <a href="#" class="m">
+                <div class="person" ">Eduardo<br>Berdichevsky<span>(1961 - )</span></div>
+            </a>
+        </li>
+        <li class="marriage">
+            <ul class="c">
+                <li>
+                    <a class="f_nolink">
+                        <div class="person" ">Abigail<br>Berdichevsky<span>(2001 - )</span></div>
+                    </a>
+                </li>
+                <li>
+                    <a class="m_nolink">
+                        <div class="person" ">Tobias<br>Berdichevsky<span>(2003 - )</span></div>
+                    </a>
+                </li>
+                <li>
+                    <a class="m_nolink">
+                        <div class="person" ">Iamin<br>Berdichevsky<span>(2007 - )</span></div>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="parent">
+            <a class="f">
+                <div class="person">Carolina<br>Overlar<span>(1978 - )</span></div>
+            </a>
+        </li>
+        <li class="divorce">
+            <ul class="c">
+                <li>
+                    <a class="f_nolink">
+                        <div class="person">Abigail<br>Berdichevsky<span>(2001 - )</span></div>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="parent">
+            <a class="m_nolink">
+                <div class="person">Bradley<br>Overlar<span>(1978 - )</span></div>
+            </a>
+        </li>
+    </ul>
 </div>
